--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,5 +1,8 @@
 <h1>Login</h1>
 
+<button><%= link_to "Login with Facebook", "/auth/facebook", class: "btn btn-primary" %></button>
+
+
 <%= form_for :user do |f| %>
   <%= f.email_field :email, placeholder: "Enter your email" %>
   <%= f.password_field :password, placeholder: "Enter your password" %>
